VPN整理/iptables
# Generated by iptables-save v1.4.7 on Tue May  2 11:16:05 2017
*filter
:INPUT ACCEPT [75:8739]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [57:5958]
-A INPUT -m policy --dir in --pol ipsec -j ACCEPT 
-A INPUT -p udp -m policy --dir in --pol ipsec -m udp --dport 1701 -j ACCEPT 
-A INPUT -p udp -m udp --dport 500 -j ACCEPT 
-A INPUT -p udp -m udp --dport 4500 -j ACCEPT 
-A FORWARD -m policy --dir in --pol ipsec -j ACCEPT 
-A FORWARD -i ppp+ -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 192.168.111.0/24 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j TCPMSS --set-mss 1436 
COMMIT
# Completed on Tue May  2 11:16:05 2017
# Generated by iptables-save v1.4.7 on Tue May  2 11:16:05 2017
*nat
:PREROUTING ACCEPT [2:104]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -m policy --dir out --pol none -j MASQUERADE 
-A POSTROUTING -s 192.168.1.0/24 -o eth0 -j MASQUERADE 
-A POSTROUTING -s 172.16.31.0/24 -j SNAT --to-source 101.201.120.17 
-A POSTROUTING -s 172.16.31.0/24 -o eth1 -j MASQUERADE 
COMMIT
# Completed on Tue May  2 11:16:05 2017
